Updated Exercise2, almost works.