@@ -2,3 +2,4 @@
 start cmd /c java -Djava.security.manager -Djava.security.policy=src/Exercise2.policy -jar dist/Exercise2.jar 1 autostart
 start cmd /c java -Djava.security.manager -Djava.security.policy=src/Exercise2.policy -jar dist/Exercise2.jar 2 autostart
 start cmd /c java -Djava.security.manager -Djava.security.policy=src/Exercise2.policy -jar dist/Exercise2.jar 3 autostart
+start cmd /c java -Djava.security.manager -Djava.security.policy=src/Exercise2.policy -jar dist/Exercise2.jar 4 autostart
